--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="row">
                     <div class="card col-sm-4" >
                             <h1 class="card-title">MISSION</h1>
-                            <img src="Images/HomeCarousel/1.jpg" class="card-img-top " alt="...">
+                            <img src="4.jpg" class="card-img-top " alt="...">
                             <div class="card-body">
                               <p class="card-text">Proparts Global team are committed to be the world’s trusted name in heavy machinery and diesel engine parts.
                                     To that end, we strive to be a valuable resource to our customers, adhering to the highest standards of business conduct.</p>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="card col-sm-4" >
                             <h1 class="card-title">VISION</h1>
-                            <img src="Images/HomeCarousel/2.jpeg" class="card-img-top" alt="...">
+                            <img src="5.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                                     
                               <p class="card-text">To provide spare parts for Heavy Equipment’s , Mining Equipment’s, Earth moving Machinery, Quarrying and Construction Equipment’s.
@@ -62,7 +62,7 @@
                     </div>
                     <div class="card col-sm-4" >
                             <h1 class="card-title" id="overview">COMPANY OVERVIEW</h1>
-                            <img src="Images/HomeCarousel/3.jpeg" class="card-img-top" alt="...">
+                            <img src="6.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <p class="card-text">PROPARTS GLOBAL INC established at USA with the sole aim of providing genuine and high-quality alternative parts equivalent to genuine parts quality with the aim of cost saving to end user with shortest possible delivery time. 
                                   PropartsGlobal team are having three decades of heavy equipment industry experience, traveled worldwide serving customer since 1988.</p>
