--- a/logistics.html
+++ b/logistics.html
@@ -46,7 +46,7 @@
             <div class="row">
                     <div class="card col-sm-6" >
                             <h1 class="card-title">SEA WAYS</h1>
-                            <img src="Images/LogisticsCarousel/1.jpg" class="card-img-top " alt="...">
+                            <img src="7.jpg" class="card-img-top " alt="...">
                             <div class="card-body">
                               <p class="card-text">A Key part of our service provision is RELIABLE WORLDWIDE DELIVERIES With distribution warehouses located in Miami, we can ensure prompt delivery on stock and non-stock parts with vast experience of logistics.
                                    Worldwide Deliveries by Sea.</p>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="card col-sm-6" >
                             <h1 class="card-title">AIR WAYS</h1>
-                            <img src="Images/LogisticsCarousel/2.jpg" class="card-img-top" alt="...">
+                            <img src="8.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                     
                               <p class="card-text">A Key part of our service provision is RELIABLE WORLDWIDE DELIVERIES With distribution warehouses located in Miami, 
