--- a/spare.html
+++ b/spare.html
@@ -45,7 +45,7 @@
             <div class="row">
                     <div class="card col-sm-4" >
                             <h1 class="card-title spareText" >COMPANY OVERVIEW</h1>
-                            <img src="Images/SparePartsCarousel/1_1.jpg" class="card-img-top " >
+                            <img src="10.jpg" class="card-img-top " >
                             <div class="card-body">
                               <p class="card-text">PROPARTS GLOBAL INC established at USA with the sole aim of providing genuine and high-quality alternative parts equivalent
                                    to genuine parts quality with the aim of cost saving toend user with shortest possible delivery time. Catering to mining, earth moving, quarryingand construction equipment’s.
@@ -54,7 +54,7 @@
                     </div>
                     <div class="card col-sm-4" >
                             <h1 class="card-title spareText">WE EXPORT PARTS SUITABLE FOR</h1>
-                            <img src="Images/SparePartsCarousel/2_2.jpg" class="card-img-top" >
+                            <img src="11.jpg" class="card-img-top" >
                             <div class="card-body">
                                     
                               <p class="card-text">
@@ -79,7 +79,7 @@
                     </div>
                     <div class="card col-sm-4 " >
                             <h1 class="card-title spareText" id="heavySpare">HEAVY EQUIPMENT</h1>
-                            <img src="Images/SparePartsCarousel/3_3.jpg" class="card-img-top" >
+                            <img src="12.jpg" class="card-img-top" >
                             <div class="card-body">
                               <p class="card-text">
                                     Drive Train
